Fixed search bar on mobile

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -754,6 +754,6 @@ and (max-width : 982px){
 	}
 
   .input-group.navbar-search{
-  	width: 80% !important;
+  	width: 75% !important;
   }
 }
